--- a/Johan_Reinoso_AP1_P1/appsettings.json
+++ b/Johan_Reinoso_AP1_P1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConStr": "workstation id=AplicadaParcial.mssql.somee.com;packet size=4096;user id=Raven7922_SQLLogin_1;pwd=14775arhor;data source=AplicadaParcial.mssql.somee.com;persist security info=False;initial catalog=AplicadaParcial;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
